--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="/Img/fondo.jpg" alt="" id="fondo">
+    <img src="/Img/Fondo.jpg" alt="" id="fondo">
     <img src="/Img/logo.jpg" alt="" id="logoinicio">
     <div class="textoencima">
     <h2 id="textoencimah2">¿Desearías aprender a contabilizar facilmente, realizar tus talleres de forma correcta y ordenada?</h2>
