--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <li>
  <img src="/Img/logotransparente.png" alt="Logo" id="logo">
 </li>
- <a href=""><li><button class="btn1">Asientos</button></a></li>
+ <a href="asientos.html"><li><button class="btn1">Asientos</button></a></li>
  <a href=""><li><button class="btn1">Cuentas T</button></a></li>
  <a href=""><li><button class="btn1">Balance</button></a></li>
  <a href=""><li><button class="btn1">Tutorial</button></a></li>
